<resources>
    <string name="app_name">AYPCalculator</string>
    <string name="buttonNine">9</string>
    <string name="buttonEight">8</string>
    <string name="buttonSeven">7</string>
    <string name="buttonSix">6</string>
    <string name="buttonFive">5</string>
    <string name="buttonFour">4</string>
    <string name="buttonThree">3</string>
    <string name="buttonTwo">2</string>
    <string name="buttonOne">1</string>
    <string name="buttonMul">X</string>
    <string name="buttonSub">-</string>
    <string name="buttonSum">+</string>
    <string name="buttonDiv">÷</string>
    <string name="buttonZero">0</string>
    <string name="buttonDot">.</string>
    <string name="buttonEqual">=</string>
    <string name="buttonCancel">C</string>
</resources>
