<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.augmentis.ayp.aypcalculator.CalculatorActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonSeven"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonSeven" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonEight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonEight" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonNine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonNine" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonMul" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonFour"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonFour" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonFive"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonFive" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonSix"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonSix" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonDiv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonDiv" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonOne"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonOne" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonTwo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonTwo" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonThree"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonThree" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonSum"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonSum" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonCancel" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonZero"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonZero" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonEqual"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonEqual" />

            <Button
                android:textSize="30dp"
                android:id="@+id/buttonSub"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/buttonSub" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:gravity="center_vertical|right"
        android:id="@+id/textViewOperand1"
        android:padding="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:gravity="center_vertical|right"
        android:id="@+id/textViewOperand2"
        android:padding="20dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignStart="@+id/linearLayout" />
</RelativeLayout>
